--- a/Desktop/my.pentashop.world/vercel.json
+++ b/Desktop/my.pentashop.world/vercel.json
@@ -2,16 +2,15 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
-        "buildCommand": "npm run build:unified"
+        "distDir": "dist"
       }
-    },
-    {
-      "src": "frontend/api/index.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -24,11 +23,6 @@
       "dest": "/frontend/dist/$1"
     }
   ],
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "env": {
     "NODE_ENV": "production",
     "JWT_SECRET": "@jwt-secret"
