--- a/Desktop/my.pentashop.world/vercel.json
+++ b/Desktop/my.pentashop.world/vercel.json
@@ -1,9 +1,18 @@
 {
   "version": 2,
-  "builds": [
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "routes": [
     {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
     }
   ]
 } 
