--- a/Desktop/my.pentashop.world/frontend/package.json
+++ b/Desktop/my.pentashop.world/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:unified": "vite build && cp -r ../backend/data ./dist/",
+    "vercel-build": "vite build && cp -r ../backend/data ./dist/",
     "start": "node api/index.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
