Simplify Vercel configuration and fix build process

--- a/Desktop/my.pentashop.world/frontend/package.json
+++ b/Desktop/my.pentashop.world/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp -r ../backend/data ./dist/",
     "build:unified": "vite build && cp -r ../backend/data ./dist/",
     "vercel-build": "vite build && cp -r ../backend/data ./dist/",
     "start": "node api/index.js",
