--- a/Desktop/my.pentashop.world/vercel.json
+++ b/Desktop/my.pentashop.world/vercel.json
@@ -9,8 +9,8 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/dist",
-        "buildCommand": "npm run vercel-build"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     }
   ],
@@ -20,20 +20,8 @@
       "dest": "/api/index.js"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "/frontend/dist/assets/$1"
-    },
-    {
-      "src": "/data/(.*)",
-      "dest": "/frontend/dist/data/$1"
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "/frontend/dist/images/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/frontend/dist/index.html"
+      "dest": "/frontend/dist/$1"
     }
   ]
 } 
