--- a/Desktop/my.pentashop.world/vercel.json
+++ b/Desktop/my.pentashop.world/vercel.json
@@ -4,14 +4,6 @@
     {
       "src": "api/index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist",
-        "buildCommand": "npm run build"
-      }
     }
   ],
   "routes": [
@@ -21,7 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/$1"
+      "dest": "/api/index.js"
     }
   ]
 } 
