--- a/Desktop/my.pentashop.world/vercel.json
+++ b/Desktop/my.pentashop.world/vercel.json
@@ -2,7 +2,10 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node@3.0.0"
+    },
+    "api/health/index.js": {
+      "runtime": "@vercel/node@3.0.0"
     }
   }
 } 
