--- a/Desktop/my.pentashop.world/package.json
+++ b/Desktop/my.pentashop.world/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build:unified",
+    "vercel-build": "echo 'Static deployment'",
     "start": "node api/index.js",
     "test": "curl http://localhost:3001/api/health"
   },
